--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
         <p>Touch me anywhere to get started.</p>
       </div>
       <div class="screen">
-        <p>Oooo, that’s it.</p>
+        <p>Oooo, <br>that’s it.</p><br>
         <p>Touch me again.</p>
       </div>
       <div class="screen">
-        <p>That’s how I like it.</p>
+        <p>Oooo, yeah!</p><br>
+        <p>That’s how <br>I like it.</p>
       </div>
       <div class="screen">
         <p>Now your turn.</p>
@@ -41,7 +42,7 @@
         <p>I want to hear you make a sound in my microphone.</p>
       </div>
       <div class="screen">
-        <p>Are you ready?</p><br>
+        <p>Are you ready?</p><br><br>
         <p>
           <div class="selection">I’m ready</div>
         </p>
